5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1758_1580.log
== TEST (2019-05-28 10:41:11) 
-- CODE:
from numpy import*
a = array(eval(input("alunos: ")))
n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
S=0
C=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		a=a+1
		i=i+1
	elif(n[i]<6):
		r=r+1
		i=i+1
	elif(n[i]!=-1):
		i=i+1
		med= (med+n[i-1])/i
print(f)
print(a)
print(r)
print(round(med,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:42:20) 
-- CODE:
from numpy import*
a = array(eval(input("alunos: ")))
n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
S=0
C=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		a=a+1
		i=i+1
	elif(n[i]<6):
		r=r+1
		i=i+1
	elif(n[i]!=-1):
		i=i+1
		med= (med+n[i-1])/i
print(f)
print(a)
print(r)
print(round(med,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:43:03) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
S=0
C=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		a=a+1
		i=i+1
	elif(n[i]<6):
		r=r+1
		i=i+1
	elif(n[i]!=-1):
		i=i+1
		med= (med+n[i-1])/i
print(f)
print(a)
print(r)
print(round(med,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:44:53) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
S=0
C=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	elif(n[i]<6):
		r=r+1
		i=i+1
	elif(n[i]!=-1):
		i=i+1
		med= (med+n[i-1])/i
print(f)
print(ap)
print(r)
print(round(med,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:49:21) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
S=0
C=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	elif(n[i]<6):
		r=r+1
		i=i+1
	elif(n[c]!=-1):
		c=c+1
		med= (med+n[c-1])/c
print(f)
print(ap)
print(r)
print(round(med,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:51:44) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
S=0
C=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	elif(n[i]<6):
		r=r+1
		i=i+1
	#elif(n[c]!=-1):
		#c=c+1
		#med= (med+n[c-1])/c
while(c<size(a)):
	elif(n[c]!=-1):
		c=c+1
		med= (med+n[c-1])/c
print(f)
print(ap)
print(r)
print(round(med,2))
print(max(a))
		
-- EXECUTION TIME:
0.180645
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 26
    elif(n[c]!=-1):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:55:24) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
S=0
C=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	elif(n[i]<6):
		r=r+1
		i=i+1
	if(n[c]!=-1):
		c=c+1
		med= (med+n[c-1])/c

print(f)
print(ap)
print(r)
print(round(med,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:56:17) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
S=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	elif(n[i]<6):
		r=r+1
		i=i+1
	if(n[c]!=-1):
		c=c+1
		med= (med+n[c-1])/c

print(f)
print(ap)
print(r)
print(round(med,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:00:25) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	elif(n[i]<6):
		r=r+1
		i=i+1
	if(n[c]!=-1):
		med= med+n[c]
soma=med/size(n-f)
print(f)
print(ap)
print(r)
print(round(soma,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:05:11) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	elif(n[i]<6):
		r=r+1
		i=i+1

	if(n[c]!=-1):
		med= med+n[c]
		c=c+1
soma=med/(size(n)-f)
print(f)
print(ap)
print(r)
print(round(soma,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:51) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	elif(n[i]<6):
		r=r+1
		i=i+1

	if(n[i]!=-1):
		med= med+n[i]
		i=i+1
soma=med/(size(n)-f)
print(f)
print(ap)
print(r)
print(round(soma,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:08:38) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	else:
		(n[i]<6)
		r=r+1
		i=i+1
	if(n[i]!=-1):
		med= med+n[i]
		i=i+1
soma=med/(size(n)-f)
print(f)
print(ap)
print(r)
print(round(soma,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:08:55) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	else:
		(n[i]<6)
		r=r+1
		i=i+1
	if(n[i]!=-1):
		med= med+n[i]
		i=i+1
soma=med/(size(n)-f)
print(f)
print(ap)
print(r)
print(round(soma,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:09:12) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	else:
		(n[i]<6)
		r=r+1
		i=i+1
	if(n[i]!=-1):
		med= med+n[i]
		i=i+1
soma=med/(size(n)-f)
print(f)
print(ap)
print(r)
print(round(soma,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:09:38) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	else:
		(n[i]<6)
		r=r+1
		i=i+1
	if(n[i]!=-1):
		med= med+n[i]
		i=i+1
soma=med/(size(n)-f)
print(f)
print(ap)
print(r)
print(round(soma,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:15:22) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	else:
		(n[i]<6)
		r=r+1
		i=i+1
while(c<size(a)):
	if(n[c]!=-1):
		med=med + n[c]
		c=c+1
soma=med/ap		
print(f)
print(ap)
print(r)
print(round(soma,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:30) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=-1
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		#i=i+1
	elif(n[i]>=6):
		ap=ap+1
		#i=i+1
	elif((n[i]<6)and n[i]!=-1):
		r=r+1
		#i=i+1
	if(n[i]!=-1):
		soma=soma+n[i]
	if(n[i]==max(n)):
		c=i
	i=i+1
med=soma/(size(n)-f)	
print(f)
print(ap)
print(r)
print(round(med,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:24:31) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=-1
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		#i=i+1
	elif(n[i]>=6):
		ap=ap+1
		#i=i+1
	elif((n[i]<6)and n[i]!=-1):
		r=r+1
		#i=i+1
	if(n[i]!=-1):
		soma=soma+n[i]
	if(n[i]==max(n)):
		c=i
	i=i+1
med=soma/(size(n)-f)	
print(f)
print(ap)
print(r)
print(round(med,2))
print(max(a))
		
-- EXECUTION TIME:
1.9856
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 32, in <module>
    print(max(a))
TypeError: iteration over a 0-d array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:32) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=-1
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		#i=i+1
	elif(n[i]>=6):
		ap=ap+1
		#i=i+1
	elif((n[i]<6)and n[i]!=-1):
		r=r+1
		#i=i+1
	if(n[i]!=-1):
		soma=soma+n[i]
	if(n[i]==max(n)):
		c=i
	i=i+1
med=soma/(size(n)-f)	
print(f)
print(ap)
print(r)
print(round(med,2))
print(max(a))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:24:33) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=-1
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		#i=i+1
	elif(n[i]>=6):
		ap=ap+1
		#i=i+1
	elif((n[i]<6)and n[i]!=-1):
		r=r+1
		#i=i+1
	if(n[i]!=-1):
		soma=soma+n[i]
	if(n[i]==max(n)):
		c=i
	i=i+1
med=soma/(size(n)-f)	
print(f)
print(ap)
print(r)
print(round(med,2))
print(max(a))
		
-- EXECUTION TIME:
1.78983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 32, in <module>
    print(max(a))
TypeError: iteration over a 0-d array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:32) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=-1
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		#i=i+1
	elif(n[i]>=6):
		ap=ap+1
		#i=i+1
	elif((n[i]<6)and n[i]!=-1):
		r=r+1
		#i=i+1
	if(n[i]!=-1):
		soma=soma+n[i]
	if(n[i]==max(n)):
		c=i
	i=i+1
med=soma/(size(n)-f)	
print(f)
print(ap)
print(r)
print(round(med,2))
print(a[c])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:27:02) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		i=i+1
	elif(n[i]>=6):
		ap=ap+1
		i=i+1
	else:
		(n[i]<6)
		r=r+1
		i=i+1
while(c<size(a)):
	if(n[c]!=-1):
		med=med + n[c]
		c=c+1
soma=med/ap		
print(f)
print(ap)





print(r)
print(round(soma,2))
print(max(a))
		
-- EXECUTION TIME:
1.01647
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 37, in <module>
    print(max(a))
TypeError: iteration over a 0-d array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:28:05) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=-1
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		#i=i+1
	elif(n[i]>=6):
		ap=ap+1
		#i=i+1
	elif((n[i]<6)and n[i]!=-1):
		r=r+1
		#i=i+1
	if(n[i]!=-1):
		soma=soma+n[i]
	if(n[i]==max(n)):
		c=i
	i=i+1
med=soma/(size(n)-f)	
print(f)
print(ap)
print(r)
print(round(med,2))
print(a[c])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:32:14) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		#i=i+1
	elif(n[i]>=6):
		ap=ap+1
		#i=i+1
	elif((n[i]<6)and n[i]!=-1):
		r=r+1
		#i=i+1
	if(n[i]!=-1):
		soma=soma+n[i]
	if(n[i]==max(n)):
		c=i
	i=i+1
med=soma/(size(n)-f)	
print(f)
print(ap)
print(r)
print(round(med,2))
print(a[c])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:33:21) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: "))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		#i=i+1
	elif(n[i]>=6):
		ap=ap+1
		#i=i+1
	elif((n[i]<6)and n[i]!=-1):
		r=r+1
		#i=i+1
	if(n[i]!=-1):
		soma=soma+n[i]
	if(n[i]==max(n)):
		c=i
	i=i+1
med=soma/(size(n)-f)	
print(f)
print(ap)
print(r)
print(round(med,2))
print(a[c])
		
-- ERROR:
File "XXXX", line 5
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:33:36) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		#i=i+1
	elif(n[i]>=6):
		ap=ap+1
		#i=i+1
	elif((n[i]<6)and n[i]!=-1):
		r=r+1
		#i=i+1
	if(n[i]!=-1):
		soma=soma+n[i]
	if(n[i]==max(n)):
		c=i
	i=i+1
med=soma/(size(n)-f)	
print(f)
print(ap)
print(r)
print(round(med,2))
print(a[c])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:33:58) 
-- CODE:
from numpy import*
n = array(eval(input("notas: ")))
a = array(eval(input("alunos: ")))
#n = array(eval(input("notas: ")))
i=0
f=0
ap=0
r=0
soma=0
c=0
med=0
while(i<size(a)):
	if(n[i]==-1):
		f=f+1
		#i=i+1
	elif(n[i]>=6):
		ap=ap+1
		#i=i+1
	elif((n[i]<6)and n[i]!=-1):
		r=r+1
		#i=i+1
	if(n[i]!=-1):
		soma=soma+n[i]
	if(n[i]==max(n)):
		c=i
	i=i+1
med=soma/(size(n)-f)	
print(f)
print(ap)
print(r)
print(round(med,2))
print(a[c])
		
-- EXECUTION TIME:
0.599891
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
